index.css
body, h1,h2,h3,h4,h5,h6 {
    font-family: "Montserrat", sans-serif;
    margin:0 auto;
}
hr {
    border:0;
    border-top:1px solid #eee;
    margin:5px 0;
    box-sizing:content-box;
    height:10;
    overflow:visible;
}
.titleh3 {
    color: white;
}
.w3-row-padding img {
    margin-bottom: 12px
}
/* Set the width of the sidebar to 120px */
.topnav{
    height:50px;
    width:100%;
    background-color: #000;
    position:fixed !important;
    z-index:1;
    overflow:hidden;
    margin: auto;
}
.w3-white {
    color:#000 !important;
    background-color:#fff !important;
    margin-left: none;
    margin-right: auto;
}
.w3-padding-32 {
    padding-top:32px!important;
    padding-bottom:32px!important;
}
.w3-bar-block {
    width: 120px;
    /* min-width: 100%; */
    text-align: left;
    /* padding: 8px 16px; */
    border:none;
    white-space:normal;
    float:none;
    outline:0;
}
.w3-medium {
    font-size:15px!important;
}
.w3-xlarge {
    font-size:24px!important;
}
.w3-text-grey {
    color:#757575!important;
}
.w3-jumbo {
    font-size:64px!important;
    color: #FFF;
}
.w3-hover-text-green {
    color:#4CAF50!important;
}
.w3-content {
    margin-left:auto;
    margin-right:auto;
    max-width:980px;
}
.w3-container {
    content:"";
    display:table;
    clear:both;
    padding:0.01em 16px;
}
.w3-button {
    width: 100px;
    border:none;
    display:inline;
    vertical-align:middle;
    text-decoration:none;
    color:inherit;
    text-align:center;
    cursor:pointer;
    background-color: transparent;
    color:#bbb;
    white-space: normal;
}
.w3-small {
    font-size:12px;
}
.w3-hide-small {
    display:block;
}
.w3-hide-medium {
    display:none!important;
}
.w3-hide-large {
    display:none!important;
}
.w3-opacity {
    opacity:0.60;
}
.w3-hover-opacity-off {
    opacity:1;
}
.w3-center {
    display:inline-block;
    width:auto;
    text-align:center !important;
}
.w3-bar-item {
    width:auto;
    border:none;
    display:inline-block;
    width:150px;
    text-align:center;
    float:none;
    outline:0;
}
.w3-padding-large {
    padding:12px 24px!important;
}
.w3-top {
    position:fixed;
    width:100%;
    z-index:1;
    top:0;
}
.w3-button:hover {
    color:#fff!important;
    background-color:rgba(0, 0, 0, 0.267)!important;
}
.w3-xxlarge {
    font-size:24px!important;
}
.parallax-effect {
	/*By the guys at 
	https://www.w3docs.com/snippets/css/how-to-create-a-parallax-scrolling-effect.html *
	I had to look around a little to find a fully compatible parallax scroller for all browsers.
	note: modified*/
	background-image: url("https://i.imgur.com/DSZOKnt.png");
	min-height: 600px; /*One thing I wish I could change is make this responsive, but percentages dont work.*/
	height: 100%;
	width: 100%;
	background-attachment: fixed; /*actual parallax command */
	background-position: center; /*centers background*/
	background-repeat: no-repeat; /*no tiling if small*/
	background-size: cover; /*if res is low zoom it in to cover area*/
}
/* for text in the middle of photo
from w3cschools*/
.centeredtext {
	position: absolute;
	top: 50%;
	left: 50%;
    transform: translate(-50%, -50%);
}
.faximg {
    width:500px;
    height:100px;
    margin-top: 50px;
}
.faximg-small {
    width: 150px;
    height: 30px;
    margin-left: 50px;
}
.starter {
    grid-area: main;
    margin-top: 1%;
    border-style: none solid none none;
	border-width: 2px;
	border-color: #ffffff;
	/* alt is border: 2px none solid none none #ffffff but I like the readability*/
}
.academy {
	grid-area: academy;
}
footer {
    background-color: #000;
    width: 100%;
    border:none;
    vertical-align:middle;
    z-index: 2;
    position: bottom;
}
.footer-text {
    margin-left: 50px;
    font-size: small;
}
.wrapper {
	margin-top: 1%;
    display: grid;
    box-sizing: border-box;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-gap: 1em;
    grid-template-areas: 'main academy';
}
/* Remove margins from "page content" on small screens */
@media only screen and (max-width: 600px) {
    #main {
        margin-left: 0
    }
  
    .w3-bar-item {
        width:25% !important;
    }
      .faximg {
        width: 65%;
        height: auto;
    }
    .w3-bar-block {
        width: 100%;
        min-width: 100%;
        text-align: left;
        padding: 8px 16px;
        border:none;
        white-space:normal;
        float:none;
        outline:0;
    }
}

